# JJI-dropout-prediction

./: .gitignore  README.md  api.py  app.py  final_notebook.ipynb  implementation-plan.md  pyproject.toml  requirements.txt  variable_list.md
archive/: eda_student_dropout.py  student_dropout_pipeline.py
model_outputs/: classification_report_plot.csv  confusion_matrix.csv  feature_importance.csv  final_student_dropout_model.joblib  final_student_dropout_model.pkl  looker_studio_data.csv  model_features.json
notebooks/: eda_student_dropout.ipynb  student_dropout_pipeline.ipynb
src/: api.py  app.py  prepare_looker_data.py
