[project]
name = "jji-dropout-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "kaleido==0.2.1",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "pydantic>=2.11.4",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "streamlit>=1.45.1",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.34.2",
]
